tests/reference/asr-constants1-5828e8a.stderr
semantic error: The symbol 'bin' not found in the module 'lpython_builtin'
 --> tests/constants1.py:5:9
  |
5 |     b = bin(5)
  |         ^^^^^^ 
